--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,85 @@
-html {
-	background-color: lightgray;
-	margin: 30px;
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
 }
 
 body {
-	margin: 30px;
+	background-color: #63AAFF;
+}
+
+header {
+	background-image: url(../images/stitch_background.jpg);
+	background-size: contain
+}
+
+.introduction {
+	color: #0026BB;
+	text-align: center;
+	font-family: Josefin Sans;
+	text-shadow: 1px 1px 5px cyan;
+	padding: 20px;
+}
+
+.title {
+	background-color: lightskyblue;
+	text-align: center;
+	border: solid #AAAFFF 5px;
+	padding: 5px;
+	margin: 10px;
+	font-family: Josefin Sans;
+	color: #2343FD;
 }
 
 .paragraph {
 	border: solid #AAAFFF 5px;
-	padding: 10px;
-	background-color: lightcyan;
+	padding: 20px;
+	margin: 30px;
+	background-color: #91E0F0;
 	font-family: Josefin Sans;
 	line-height: 25px;
-
+	color: #002B43;
 }
 
-div.list-border {
+.column {
+	width: 50%;
+	padding: 5px;
+}
+
+#box {
+	display: flex;
+}
+
+#image {
+	max-width: 100%;
+}
+
+.list-border {
 	border: solid #AAAFFF 5px;
-	padding: 10px;
-	background-color: lightcyan;
-
+	padding: 20px;
+	margin: 30px;
+	background-color: #91E0F0;
+	font-family: Josefin Sans;
+	line-height: 25px;
+	color: #002B43;
 }
 
-.introduction {
-	color: blue;
-	text-align: center;
-	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-	margin: 10px;
-}
-
-.title-segment {
-	background-color: lightskyblue;
+.video-border {
+	border: solid #AAAFFF 5px;
+	margin-left: 30px;
+	margin-right: 30px;
+	padding: 15px;
+	background-color: #91E0F0;
 }
 
 #misc {
 	font-size: 10px;
-}
-#misc p {
 	border: 0;
 	background: 0;
 	padding: 0;
+	margin-left: 30px;
+	margin-right: 30px;
+	margin-bottom: 20px;
+	font-family: Josefin Sans;
 }
