--- a/css/styles.css
+++ b/css/styles.css
@@ -7,27 +7,46 @@
 
 body {
 	background-color: #63AAFF;
+	background-image: url(../images/stitch_background.jpg);
+	background-size: contain;
+	background-size: 15%
 }
 
 header {
-	background-image: url(../images/stitch_background.jpg);
-	background-size: contain
+	background-image: url(../images/space.jpg);
+	background-size: 100%;
+	padding: 15px;
+	border-bottom: solid cyan 5px;
 }
 
-.introduction {
-	color: #0026BB;
+h1.introduction {
+	color: cyan;
+	text-align: center;
+	font-size: 50px;
+	font-family: Josefin Sans;
+	text-shadow: 1px 1px 5px darkcyan;
+	padding: 20px; 
+}
+
+h4.introduction {
+	color: #89FFF5;
 	text-align: center;
 	font-family: Josefin Sans;
-	text-shadow: 1px 1px 5px cyan;
-	padding: 20px;
+	padding-top: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
 }
 
 .title {
 	background-color: lightskyblue;
 	text-align: center;
+	font-size: 25px;
 	border: solid #AAAFFF 5px;
 	padding: 5px;
-	margin: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-top: 40px;
 	font-family: Josefin Sans;
 	color: #2343FD;
 }
@@ -35,7 +54,9 @@ header {
 .paragraph {
 	border: solid #AAAFFF 5px;
 	padding: 20px;
-	margin: 30px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-top: 15px;
 	background-color: #91E0F0;
 	font-family: Josefin Sans;
 	line-height: 25px;
@@ -45,6 +66,10 @@ header {
 .column {
 	width: 50%;
 	padding: 5px;
+}
+
+.box {
+	display: flex;
 }
 
 #box {
@@ -58,7 +83,9 @@ header {
 .list-border {
 	border: solid #AAAFFF 5px;
 	padding: 20px;
-	margin: 30px;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-top: 15px;
 	background-color: #91E0F0;
 	font-family: Josefin Sans;
 	line-height: 25px;
@@ -67,8 +94,9 @@ header {
 
 .video-border {
 	border: solid #AAAFFF 5px;
-	margin-left: 30px;
-	margin-right: 30px;
+	margin-top: 15px;
+	margin-left: 35px;
+	margin-right: 35px;
 	padding: 15px;
 	background-color: #91E0F0;
 }
@@ -78,8 +106,6 @@ header {
 	border: 0;
 	background: 0;
 	padding: 0;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-bottom: 20px;
+	margin: 35px;
 	font-family: Josefin Sans;
 }
